# poker-modelling

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/poker_api/models/: hand.py
backend/poker_api/repositories/: hand_repository.py
backend/poker_api/services/: game_service.py
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/ui/: button.tsx  combo-button.tsx
frontend/src/lib/: api.ts  game-logic.ts  types.ts
