[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jakaria Mashud Shahria <jakariamsria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pokerkit = "^0.6.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
